Fix spacing of links in footer, Fix spacing of menu in header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,11 +54,20 @@ header div {
 
 /* Menu bar */
 .top-nav-menu {
-    align-items: right;
-    height: 10px;
-    padding-right: 20px;
     display: flex;
-    top: 0;
+    flex-direction: row;
+    height: 5vh;
+    justify-content: space-between;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+.menu-button-container {
+    display: none;
+    flex-direction: column;
+    justify-content: right;
 }
 
 /* Hamburger menu */
@@ -87,7 +96,7 @@ header div {
     width: 50%;
     display: flex;
     flex-direction: column;
-
+    padding: 0 4px;
 }
 
 /* Main Content */
@@ -139,13 +148,25 @@ header div {
 }
 
 /* Footer */
-footer {
+.footer-container {
     background-color: #222426;
     font-family: 'Raleway', sans-serif;
-    bottom: 0;
+
     width: 100%;
     height: 4vh;
     padding: 2px 10px;
+
+}
+
+.social-media-links {
     display: flex;
     align-items: center;
+    list-style-type: none;
+    justify-content: center;
+
+}
+
+
+.social-media-links li {
+    padding: 2px 6px;
 }
